--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/caleb-beichner/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/GreenCaleb3" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/calebBeichner3" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -61,7 +61,7 @@
 						</article>
 							<article class="post featured">
 								<header class="major">
-									<h2>Shopping Experience<a href="https://github.com/GreenCaleb3/Wizard-Store"><br />
+									<h2><a href="https://github.com/GreenCaleb3/Wizard-Store">Shopping Experience<br />
 									</a></h2>
 									<p><br />
 									Program that simulates a shopping experience<br. />
@@ -97,6 +97,18 @@
 								</article>
 								
 							</section>
+
+							<article class="post featured">
+								<header class="major">
+									<h2>About Me<a href=""><br />
+									</a></h2>
+									<p><br />
+									My name is Caleb Beichner and I am a student at the University of Pittsburgh. I am currently pursuing a degree in Computer Science.
+									I have three years of Java experience and two years of Python experience. I have a drive for learning new things and expanding my developing knowledge. 
+									Looking for growth opportunities to try new areas of programming.<br. />
+									
+									</p>
+								</header>
 
 					</div>
 
